# hictk

./: .clang-format  .clang-tidy  .cmake-format.yaml  .codespellrc  .dockerignore  .editorconfig  .gersemirc  .gitattributes  .gitignore  .isort.cfg  .markdownlint.yaml  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  CMakeLists.txt  Dockerfile  Dockerfile.alpine  LICENSE  README.md  conanfile.Dockerfile.py  conanfile.py  conanfile.txt  pyproject.toml  setup.cfg  setup.py  setup_conan_environments.sh
benchmark/: CMakeLists.txt  main.cpp
benchmark/bin_table/: CMakeLists.txt  bin_ids_to_genomic_coords.cpp  bin_table.cpp  common.hpp  genomic_coords_to_bin_ids.cpp
benchmark/bin_table_coords_to_id/: CMakeLists.txt  bin_table_coords_to_id.cpp
benchmark/bin_table_id_to_coords/: CMakeLists.txt  bin_table_id_to_coords.cpp
benchmark/bins/: CMakeLists.txt  bins.cpp
benchmark/cooler_creation/: CMakeLists.txt  cooler_creation.cpp
benchmark/cooler_traversal/: CMakeLists.txt  cooler_traversal.cpp
benchmark/fetch_and_sum/: CMakeLists.txt  fetch_and_sum.cpp
benchmark/formatting/: CMakeLists.txt  common.hpp  formatting.cpp
benchmark/hdf5_iterator/: CMakeLists.txt  hdf5_iterator.cpp
benchmark/hic/: CMakeLists.txt  dump.cpp
benchmark/hic_creation/: CMakeLists.txt  hic_creation.cpp
benchmark/hic_traversal/: CMakeLists.txt  hic_traversal.cpp
benchmark/interaction_fetching/: CMakeLists.txt  common.hpp  cooler.cpp  cooler_cis_queries.cpp  cooler_gw_queries.cpp  cooler_trans_queries.cpp  file.cpp  file_cis_queries.cpp  file_gw_queries.cpp  file_trans_queries.cpp  hic.cpp  hic_cis_queries.cpp  hic_gw_queries.cpp  hic_trans_queries.cpp
benchmark/pixel_formatting/: CMakeLists.txt  pixel_formatting.cpp
benchmark/pixel_merger/: CMakeLists.txt  pixel_merger.cpp
benchmark/pixels/: CMakeLists.txt  common.hpp  pixels.cpp
benchmark/reference/: CMakeLists.txt  fetch_chromosomes.cpp
benchmark/scripts/: parse_benchmark_report.py  plot_interaction_fetching_benchmarks.py
benchmark/zoomify/: CMakeLists.txt  zoomify.cpp
bindings/python/: CMakeLists.txt
bindings/python/src/: CMakeLists.txt  common.hpp  hictk.cpp  hictkpy.cpp  hictkpy_cooler.hpp  hictkpy_file.hpp  hictkpy_hic.hpp
examples/: CMakeLists.txt  quicktour_example_001.cpp  quicktour_example_002.cpp  quicktour_example_003.cpp
src/: CMakeLists.txt
src/balancing/: CMakeLists.txt  vc_impl.hpp  weights_impl.hpp
src/bin_table/: CMakeLists.txt  bin_table_impl.hpp
src/chromosome/: CMakeLists.txt  chromosome_impl.hpp
src/common/: CMakeLists.txt
src/cooler/: CMakeLists.txt  attribute_impl.hpp  balancing_impl.hpp  bin_table_impl.hpp  chromosome_impl.hpp  coolerpp_accessors_impl.hpp  coolerpp_impl.hpp  coolerpp_read_impl.hpp  coolerpp_standard_attr_impl.hpp  coolerpp_validation_impl.hpp  coolerpp_write_impl.hpp  dataset_accessors_impl.hpp  dataset_impl.hpp  dataset_iterator_impl.hpp  dataset_read_impl.hpp  dataset_write_impl.hpp  file_accessors_impl.hpp  file_impl.hpp  file_read_impl.hpp  file_standard_attr_impl.hpp  file_validation_impl.hpp  file_write_impl.hpp  genomic_interval_impl.hpp  index_impl.hpp  multires_cooler_impl.hpp  pixel_impl.hpp  pixel_selector_impl.hpp  uri_impl.hpp  utils_copy_impl.hpp  utils_equal_impl.hpp  utils_impl.hpp  utils_merge_impl.hpp  validation_impl.hpp  variant_buff_impl.hpp
src/cooler/config/: git.hpp.in  version.hpp.in
src/file/: CMakeLists.txt  file_impl.hpp
src/fmt/: CMakeLists.txt
src/genomic_interval/: CMakeLists.txt  genomic_interval_impl.hpp
src/hic/: CMakeLists.txt  block_cache_impl.hpp  block_reader_impl.hpp  cache_impl.hpp  file_reader_impl.hpp  file_stream_impl.hpp  filestream_impl.hpp  footer_cache_impl.hpp  footer_impl.hpp  hic_file_impl.hpp  hic_file_stream_impl.hpp  hic_file_utils_impl.hpp  hic_footer_impl.hpp  hic_header_impl.hpp  hic_matrix_selector_impl.hpp  index_impl.hpp  local_fstream_impl.hpp  pixel_selector_impl.hpp  remote_fstream_impl.hpp  utils_impl.hpp  weight_cache_impl.hpp
src/hictk/: CMakeLists.txt  main.cpp
src/hictk/balance/: CMakeLists.txt  balance.cpp  balance_ice.cpp  balance_scale.cpp  balance_vc.cpp  common.hpp
src/hictk/build_metadata/: CMakeLists.txt  build_options.cpp  dependency_metadata.cpp
src/hictk/cli/: CMakeLists.txt  cli.cpp  cli_balance.cpp  cli_convert.cpp  cli_dump.cpp  cli_fix_mcool.cpp  (+6 more)
src/libhictk/: CMakeLists.txt
src/numeric/: CMakeLists.txt  numeric_utils_impl.hpp
src/pixel/: CMakeLists.txt  pixel_impl.hpp
src/reference/: CMakeLists.txt  reference_impl.hpp
src/transformers/: CMakeLists.txt  coarsen_impl.hpp  join_genomic_coords_impl.hpp  transformers_impl.hpp
src/variant/: CMakeLists.txt  variant_buff_impl.hpp
test/: CMakeLists.txt
test/cooler/: CMakeLists.txt
test/fuzzer/: CMakeLists.txt  README.md  environment.yml  test_files.json
test/hic/: CMakeLists.txt  filestream_local_test.cpp  filestream_remote_test.cpp  hic_file_stream_test.cpp  hic_file_test.cpp  matrix_zoom_data_test.cpp
test/hictk_integration_suite/: README.md  config.toml  pyproject.toml
test/integration/: README.md  config.toml  pyproject.toml
test/scripts/: check_test_files_exist.sh  compare_cooler_files.sh  compare_matrix_files.sh  compare_plain_files.sh  compare_weights.py  create_datasets_for_fuzzer.py  fuzzy_test.py  generate_test_packaging_main.py  h5repack.sh  hictk_balance.sh  hictk_balance_ice.sh  hictk_balance_scale.sh  hictk_balance_vc.sh  hictk_convert_cool2hic.sh  hictk_convert_hic2cool.sh  hictk_dump_balanced.sh  hictk_dump_bins.sh  hictk_dump_cells.sh  hictk_dump_chroms.sh  hictk_dump_cis.sh  hictk_dump_gw.sh  hictk_dump_normalizations.sh  hictk_dump_resolutions.sh  hictk_dump_trans.sh  hictk_dump_weights.sh  hictk_fix_mcool.sh  hictk_load_4dn.sh  hictk_load_bg2.sh  hictk_load_coo.sh  hictk_merge.sh  hictk_metadata.sh  hictk_rename_chromosomes.sh  hictk_validate.sh  hictk_zoomify.sh  is_valid_json.py  is_valid_toml.py  is_valid_yaml.py  nproc.sh  patch_hictkpy.py  readlink.sh  (+2 more)
test/units/: CMakeLists.txt
test/utils/: CMakeLists.txt  hictk_test_compare_coolers.cpp  hictk_test_dump_weights.cpp
(+773 files in other folders)
