# Copyright (C) 2023 Roberto Rossini <roberros@uio.no>
#
# SPDX-License-Identifier: MIT

[metadata]
name = hictkpy
version = 0.0.1
author = Roberto Rossini
author_email = roberros@uio.no
description = Blazing fast toolkit to work with .hic and .cool files
long_description = file: README.md, LICENSE
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
python_requires = >=3.7
install_requires =
    numpy
    pandas
    scipy
    importlib-metadata; python_version<"3.8"
