# Copyright (C) 2023 Roberto Rossini <roberros@uio.no>
#
# SPDX-License-Identifier: MIT

add_subdirectory(bin_table)
add_subdirectory(cooler_creation)
add_subdirectory(cooler_traversal)
add_subdirectory(fetch_and_sum)
add_subdirectory(hdf5_iterator)
add_subdirectory(hic_creation)
add_subdirectory(hic_traversal)
add_subdirectory(pixel_formatting)
add_subdirectory(pixel_merger)
add_subdirectory(reference)
add_subdirectory(zoomify)
