# Copyright (C) 2023 Roberto Rossini <roberros@uio.no>
#
# SPDX-License-Identifier: MIT

add_subdirectory(bin_table)
add_subdirectory(bins)
add_subdirectory(cooler_creation)
add_subdirectory(cooler_traversal)
add_subdirectory(formatting)
add_subdirectory(hdf5_iterator)
add_subdirectory(hic_creation)
add_subdirectory(hic_traversal)
add_subdirectory(interaction_fetching)
add_subdirectory(pixel_merger)
add_subdirectory(pixels)
add_subdirectory(reference)
add_subdirectory(zoomify)
